Answers now appear, and the web app provides feedback on whether or not the answer was correct. Next step is to hide the answer from the question text, aka create the blank to fill.

--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
         <button id="answer_a" onclick="answered_a()">A</button>
         <button id="answer_b" onclick="answered_b()">B</button>
         <button id="answer_c" onclick="answered_c()">C</button>
+
+        <h3 id="answer_response_label" style="margin-top: 5%"> ... Answer Response Here ...</h3>
       </div>
 
       <div class="row">
-        <button onclick="load_question()">Next Question ></button>
+        <button id="next_question_btn" onclick="load_question()">Next Question ></button>
       </div>
     </div>
   </div>
