Satisfied with the project. ready to write a README and submit.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="ten columns" style="margin-top: 5%">
         <div class="eight columns">
-          <input class="u-full-width" id="article_name_input" type="text" placeholder="Type article name (ie. Honda, starfish, baseball, Harry Potter)">
+          <input class="u-full-width" id="article_name_input" type="text" placeholder="Type article name (ie. Honda, starfish, baseball)">
         </div>
         <div class="two columns">
           <button onclick="new_article_query()">Quiz Me!</button>
